--- a/linuxappconfiguration/classworklinuxappcreation.yaml
+++ b/linuxappconfiguration/classworklinuxappcreation.yaml
@@ -2,9 +2,6 @@ listoflinuxapp:
   - name: firstlinuxapp    
     os_type: Linux
     sku_name: P1v2
-  - name: secondlinuxapp    
-    os_type: Linux
-    sku_name: EP1
   - name: thirdlinuxapp    
     os_type: Linux
-    sku_name: WS1
+    sku_name: P1v2
