--- a/linuxappconfiguration/classworklinuxappcreation.yaml
+++ b/linuxappconfiguration/classworklinuxappcreation.yaml
@@ -2,6 +2,8 @@ listoflinuxapp:
   - name: firstlinuxapp    
     os_type: Linux
     sku_name: P1v2
+    enabled: true
   - name: thirdlinuxapp    
     os_type: Linux
     sku_name: P1v2
+    enable: false
